--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,22 @@ html {
   background: linear-gradient(45deg, #ff7e5f, #feb47b, #86a8e7, #7f7fd5);
 }
 
+.main-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 25px;
+  text-decoration: underline;
+  background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
 .indian-flag-container {
   display: flex;
   align-items: center;
@@ -28,6 +44,7 @@ html {
   flex-direction: column;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8);
   border-radius: 2px 5px 5px 2px;
+  animation: flagWaves 5s ease-in-out infinite;
 }
 
 .flag-orange,
@@ -82,6 +99,27 @@ html {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes flagWaves {
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(1deg);
+  }
+  40% {
+    transform: rotate(0deg);
+  }
+  60% {
+    transform: rotate(1deg);
+  }
+  80% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(1deg);
   }
 }
 
@@ -149,4 +187,87 @@ html {
   background: linear-gradient(to right, #522200, #7a3a1e, #7a3a1e, #522200);
   border-radius: 4px 4px 0 0;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8);
+}
+
+.audio-container {
+  margin-top: 30px;
+}
+
+.play-button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-image: url("../public/flower-2bg.png");
+  background-size: cover;
+  background-position: center;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.falling-flowers {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 100;
+}
+
+.falling-flower {
+  position: absolute;
+  width: 50px;
+  height: auto;
+  opacity: 0.8;
+  animation: fall linear infinite;
+}
+
+@keyframes fall {
+  from {
+    transform: translateY(-100vh);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(100vh);
+  }
+}
+
+.falling-flowers .falling-flower:nth-child(1) {
+  left: 10%;
+  animation-duration: 10s;
+  animation-delay: 0s;
+}
+
+.falling-flowers .falling-flower:nth-child(2) {
+  left: 25%;
+  animation-duration: 12s;
+  animation-delay: -5s;
+}
+
+.falling-flowers .falling-flower:nth-child(3) {
+  left: 40%;
+  animation-duration: 15s;
+  animation-delay: -10s;
+}
+
+.falling-flowers .falling-flower:nth-child(4) {
+  left: 55%;
+  animation-duration: 8s;
+  animation-delay: -7s;
+}
+
+.falling-flowers .falling-flower:nth-child(5) {
+  left: 70%;
+  animation-duration: 11s;
+  animation-delay: -4s;
+}
+
+.falling-flowers .falling-flower:nth-child(6) {
+  left: 85%;
+  animation-duration: 13s;
+  animation-delay: -6s;
 }
